[gd_scene load_steps=7 format=2]

[ext_resource path="res://Games/uno/uno_card.gd" type="Script" id=1]
[ext_resource path="res://Games/uno/shiny_uno_plate.tres" type="Material" id=2]
[ext_resource path="res://Games/uno/uno_cards_spatialmaterial.tres" type="Material" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.72, 0.04, 1 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.8, 0.02, 0.8 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 1.44, 0.04, 2 )

[node name="uno_card" type="Area" groups=[
"draggable",
"rotatable",
]]
script = ExtResource( 1 )
value_mesh = NodePath("value_mesh")
plate_mesh = NodePath("plate_mesh")
values_mat = ExtResource( 3 )
plates_mat = ExtResource( 2 )
colors = [ Color( 0.960784, 0.392157, 0.384314, 1 ), Color( 0.968627, 0.890196, 0.34902, 1 ), Color( 0, 0.764706, 0.898039, 1 ), Color( 0.184314, 0.886275, 0.607843, 1 ), Color( 0, 0, 0, 1 ) ]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.04, 0 )
shape = SubResource( 1 )

[node name="value_mesh" type="MeshInstance" parent="."]
transform = Transform( 1.3, 0, 0, 0, 1, 0, 0, 0, 1.3, 0, -0.02, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="plate_mesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.04, 0 )
mesh = SubResource( 3 )
material/0 = ExtResource( 2 )
